# qr_code

./: README.md  README.rst  pyproject.toml
qr_code_generator/: app.py  qr_code.py
tests/: test_qr_code_generator.py
